# mijia-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FAQ.md  MANIFEST.in  README.md  api.py  config.json  login.py  pyproject.toml  requirements.txt  setup.py  test_apis.py
.github/ISSUE_TEMPLATE/: bug_report.md
apis/: DevAtt.py  __init__.py  getDevices.py  getRooms.py  getScenes.py  getconsItems.py  postData.py  runScene.py
decrypt/: decrypt.py  decrypt_har.py
demos/: decrypt.py  decrypt_har.py  test_QRlogin.py  test_apis.py  test_available.py  test_device_attr.py  test_device_func.py  test_device_wifispeaker.py  test_devices_airconditioner.py  test_devices_light.py  test_devices_sensor.py  test_devices_v2_light.py  test_devices_wifispeaker.py  test_get_device_info.py  test_get_statistics.py  test_login.py
demos/dev_info_example/: lumi.acpartner.mcn04.json  miaomiaoce.sensor_ht.t1.json  yeelink.light.lamp4.json
docs/: .gitignore  about.md  changelog.md  faq.md  index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/guide/: installation.md  introduction.md  quickstart.md
docs/reference/: cli-args.md  errors.md  mijia-api.md  mijia-device.md
docs/usage/: basic-api.md  best-practices.md  cli.md  mcp.md  mijia-device.md  skill.md
mijiaAPI/: __init__.py  __main__.py  __version__.py  apis.py  code.py  consts.py  devices.py  errors.py  logger.py  login.py  mcp_server.py  miutils.py  urls.py  utils.py  version.py
skills/: SKILL.md
